tests/snapshots/opendbc/mazda_radar.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - XXX
messages:
  - id:
      Standard: 540
    name: CRZ_CTRL
    size: 8
    transmitter:
      NodeName: XXX
  - id:
      Standard: 539
    name: CRZ_INFO
    size: 8
    transmitter:
      NodeName: XXX
  - id:
      Standard: 865
    name: RADAR_TRACK_361
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: DIST_OBJ
        multiplexer_indicator: Plain
        start_bit: 7
        size: 12
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 4095
        unit: ""
        receivers:
          - XXX
      - name: ANG_OBJ
        multiplexer_indicator: Plain
        start_bit: 11
        size: 12
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -2047
        max: 2047
        unit: ""
        receivers:
          - XXX
      - name: RELV_OBJ
        multiplexer_indicator: Plain
        start_bit: 31
        size: 11
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1023
        max: 1023
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 866
    name: RADAR_TRACK_362
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: DIST_OBJ
        multiplexer_indicator: Plain
        start_bit: 7
        size: 12
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 4095
        unit: ""
        receivers:
          - XXX
      - name: ANG_OBJ
        multiplexer_indicator: Plain
        start_bit: 11
        size: 12
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -2047
        max: 2047
        unit: ""
        receivers:
          - XXX
      - name: RELV_OBJ
        multiplexer_indicator: Plain
        start_bit: 31
        size: 11
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1023
        max: 1023
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 867
    name: RADAR_TRACK_363
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: DIST_OBJ
        multiplexer_indicator: Plain
        start_bit: 7
        size: 12
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 4095
        unit: ""
        receivers:
          - XXX
      - name: ANG_OBJ
        multiplexer_indicator: Plain
        start_bit: 11
        size: 12
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -2047
        max: 2047
        unit: ""
        receivers:
          - XXX
      - name: RELV_OBJ
        multiplexer_indicator: Plain
        start_bit: 31
        size: 11
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1023
        max: 1023
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 868
    name: RADAR_TRACK_364
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: DIST_OBJ
        multiplexer_indicator: Plain
        start_bit: 7
        size: 12
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 4095
        unit: ""
        receivers:
          - XXX
      - name: ANG_OBJ
        multiplexer_indicator: Plain
        start_bit: 11
        size: 12
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -2047
        max: 2047
        unit: ""
        receivers:
          - XXX
      - name: RELV_OBJ
        multiplexer_indicator: Plain
        start_bit: 31
        size: 11
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1023
        max: 1023
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 869
    name: RADAR_TRACK_365
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: DIST_OBJ
        multiplexer_indicator: Plain
        start_bit: 7
        size: 12
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 4095
        unit: ""
        receivers:
          - XXX
      - name: ANG_OBJ
        multiplexer_indicator: Plain
        start_bit: 11
        size: 12
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -2047
        max: 2047
        unit: ""
        receivers:
          - XXX
      - name: RELV_OBJ
        multiplexer_indicator: Plain
        start_bit: 31
        size: 11
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1023
        max: 1023
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 870
    name: RADAR_TRACK_366
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: DIST_OBJ
        multiplexer_indicator: Plain
        start_bit: 7
        size: 12
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 4095
        unit: ""
        receivers:
          - XXX
      - name: ANG_OBJ
        multiplexer_indicator: Plain
        start_bit: 11
        size: 12
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -2047
        max: 2047
        unit: ""
        receivers:
          - XXX
      - name: RELV_OBJ
        multiplexer_indicator: Plain
        start_bit: 31
        size: 11
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1023
        max: 1023
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 1177
    name: RADAR_499
    size: 8
    transmitter:
      NodeName: XXX
